ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-kubernetes-ingress-controller
  namespace: default
  labels:
    app: ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-controller
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      hostNetwork: true
      serviceAccountName: default-kubernetes-ingress-controller
      containers:
      - name: default-kubernetes-ingress-controller
        image: docker.io/mfordjody/default-ingress-controller:test
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: default
spec:
  controller: "sample.io/default-ingress-controller"
