http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: default
  rules:
    - host: admin.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 8080
