https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - admin.example.local
    secretName: default-ingress-tls
  ingressClassName: default
  rules:
  - host: admin.example.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: admin
              port:
                number: 8080
